--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Rayan's homepage
+title: Rayan's Homepage
 description: Bookmark this to keep an eye on what I'm up to!
